Made inital left section design

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,8 @@
         "react/no-unescaped-entities": "warn",
         "react/prop-types": "warn",
         "react/jsx-curly-newline": "off",
-        "react/jsx-one-expression-per-line": "off"
+        "react/jsx-one-expression-per-line": "off",
+        "react/jsx-wrap-multilines": ["error", {"declaration": false, "assignment": false}],
+        "implicit-arrow-linebreak": "off"
       }
 }
