--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
     "start": "node index",
     "start:dev": "nodemon",
     "lint": "eslint --ext .js --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
@@ -20,7 +20,8 @@
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
     "nodemon": "^2.0.7",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "supertest": "^6.1.3"
   },
   "lint-staged": {
     "**/*.js": [
@@ -31,6 +32,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mocha": "^8.3.0",
     "mongodb": "3.2",
     "morgan": "^1.10.0"
   }
