made route post

--- a/api/package.json
+++ b/api/package.json
@@ -34,6 +34,7 @@
     "express": "^4.17.1",
     "mocha": "^8.3.0",
     "mongodb": "3.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uid": "^2.0.0"
   }
 }
