--- a/api/package.json
+++ b/api/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node index",
     "start:dev": "nodemon",
-    "lint": "eslint --ext .js --fix",
-    "test": "mocha"
+    "lint": "eslint --ext .js --fix"
   },
   "author": "",
   "license": "ISC",
@@ -20,8 +19,7 @@
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
     "nodemon": "^2.0.7",
-    "prettier": "^2.2.1",
-    "supertest": "^6.1.3"
+    "prettier": "^2.2.1"
   },
   "lint-staged": {
     "**/*.js": [
@@ -32,9 +30,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mocha": "^8.3.0",
     "mongodb": "3.2",
     "morgan": "^1.10.0",
-    "uid": "^2.0.0"
+    "uuid-int": "^3.0.3"
   }
 }
