--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,9 @@
         "react/jsx-curly-newline": "off",
         "react/jsx-one-expression-per-line": "off",
         "react/jsx-wrap-multilines": ["error", {"declaration": false, "assignment": false}],
-        "implicit-arrow-linebreak": "off"
+        "implicit-arrow-linebreak": "off",
+        "no-underscore-dangle": "off",
+        "no-unused-vars": "off",
+        "function-paren-newline": "off"
       }
 }
